--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   btnNewContenido.addEventListener('click', cargarFormularioContenido);
 
   function cargarFormularioContenido() {
-    fetch('funciones/alta_contenidos.php')
+    fetch('funciones/base.php')
       .then(response => response.text())
       .then(html => {
         formAltaContenido.innerHTML = html;
